--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "@types/react-dom": "18.0.10",
     "antd": "^5.11.1",
     "axios": "^1.7.2",
+    "draft-js": "^0.11.7",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
     "file-upload-with-preview": "^4.2.0",
     "i18next": "^23.6.0",
+    "jodit-react": "^4.1.2",
     "lottie-react": "^2.4.0",
     "mantine-datatable": "^7.9.1",
     "moment": "^2.30.1",
@@ -38,9 +40,12 @@
     "react": "18.2.0",
     "react-animate-height": "^3.1.0",
     "react-countup": "^6.5.3",
+    "react-csv": "^2.2.2",
     "react-dom": "18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-i18next": "^13.3.1",
     "react-images-uploading": "^3.1.7",
+    "react-paginate": "^8.2.0",
     "react-perfect-scrollbar": "^1.5.8",
     "react-popper": "^2.3.0",
     "react-quill": "^2.0.0",
@@ -56,6 +61,7 @@
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.8",
     "@types/lodash": "^4.14.191",
+    "@types/react-draft-wysiwyg": "^1.13.8",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "prettier": "^2.8.0",
