--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-react": "^9.0.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@headlessui/react": "^2.0.4",
@@ -21,6 +22,9 @@
     "@react-aria/interactions": "3.16.0",
     "@reduxjs/toolkit": "^1.9.1",
     "@swc/helpers": "^0.5.11",
+    "@tiptap/pm": "^2.6.4",
+    "@tiptap/react": "^2.6.4",
+    "@tiptap/starter-kit": "^2.6.4",
     "@types/node": "18.11.18",
     "@types/react": "^18.3.3",
     "@types/react-dom": "18.0.10",
@@ -43,6 +47,7 @@
     "react-csv": "^2.2.2",
     "react-dom": "18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
+    "react-froala-wysiwyg": "^4.2.1",
     "react-i18next": "^13.3.1",
     "react-images-uploading": "^3.1.7",
     "react-paginate": "^8.2.0",
@@ -53,6 +58,8 @@
     "react-select": "^5.8.0",
     "react-sortablejs": "6.1.4",
     "sortablejs": "^1.15.0",
+    "suneditor": "^2.47.0",
+    "suneditor-react": "^3.6.1",
     "sweetalert2": "^11.11.1",
     "typescript": "4.9.4",
     "yup": "^0.32.11"
